--- a/PWMA_ENTREGAS/PWMA_ENTREGAS/PWMA-Semana05/PWMA-Atividade5/css/componentes/body.css
+++ b/PWMA_ENTREGAS/PWMA_ENTREGAS/PWMA-Semana05/PWMA-Atividade5/css/componentes/body.css
@@ -1,8 +1,7 @@
 div#page {
-    border:5px solid purple;
     width:1470px;
-    margin:0;
-    padding:5px;
     justify-content: center;
     position:relative;
+    border: 7px solid black;
   }
+
