--- a/PWMA_ENTREGAS/PWMA_ENTREGAS/PWMA-Semana05/PWMA-Atividade5/css/componentes/body.css
+++ b/PWMA_ENTREGAS/PWMA_ENTREGAS/PWMA-Semana05/PWMA-Atividade5/css/componentes/body.css
@@ -1,5 +1,6 @@
 div#page {
-    width:1470px;
+  margin: 0 auto;
+    width:95%;
     justify-content: center;
     position:relative;
     border: 7px solid black;
