--- a/PWMA_ENTREGAS/PWMA_ENTREGAS/PWMA-Semana05/PWMA-Atividade5/css/componentes/header.css
+++ b/PWMA_ENTREGAS/PWMA_ENTREGAS/PWMA-Semana05/PWMA-Atividade5/css/componentes/header.css
@@ -1,7 +1,7 @@
 .header {
     display: flex;
-    width: 1455px;
-    height: 84px;
+    flex-wrap: wrap;
+    height: 10%;
     position:relative;
     border-bottom: 7px solid black;
     align-items: center;
@@ -13,15 +13,18 @@
     height: 79px;
     width: 275px;
     display: inline-flex;
-    padding: 0;
 }
 
+.link-logo {
+    text-decoration: none;
+    color: black;
+}
 
 .navigation {
     display: inline-flex;
     justify-content: center;
     align-items: center;
-    gap: 50px;
+    gap: 25px;
 }
 
 .links {
