--- a/PWMA_ENTREGAS/PWMA_ENTREGAS/PWMA-Semana05/PWMA-Atividade5/css/componentes/texts.css
+++ b/PWMA_ENTREGAS/PWMA_ENTREGAS/PWMA-Semana05/PWMA-Atividade5/css/componentes/texts.css
@@ -9,3 +9,17 @@
 .requisitos {
     text-align: left;
 }
+
+#subAbout {
+    color: gray;
+}
+
+.rowTitle {
+    font-size: 17px;
+
+}
+
+.rowContent {
+    font-size: 17px;
+
+}
