--- a/PWMA_ENTREGAS/PWMA_ENTREGAS/PWMA-Semana05/PWMA-Atividade5/css/componentes/footer.css
+++ b/PWMA_ENTREGAS/PWMA_ENTREGAS/PWMA-Semana05/PWMA-Atividade5/css/componentes/footer.css
@@ -20,54 +20,17 @@
     display: inline-flex;
 }
 
-#coluna1 {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 24px;
-    margin-top: 35px;
-}
 
-#lista1 {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 12px;
-}
-
-#coluna2 {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 24px;
-    margin-top: 35px;
-}
-
-#lista2 {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 12px;
-}
-
-#coluna3 {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 24px;
-    margin-top: 35px;
-
+.linksFooter {
+    text-decoration: none;
+    color: black;
+    font-size: 15px;
 }
 
 #lista3 {
     display: flex;
     align-items: flex-start;
     gap: 12px;
-}
-
-.linksFooter {
-    text-decoration: none;
-    color: black;
-    font-size: 15px;
+    flex-direction: row;
 }
 
